@@ -78,6 +78,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* fix support for symlinks on windows
 	* fix long filename issue (on unixes)
 	* fixed performance bug in DHT torrent eviction
 	* fixed win64 build (GetFileAttributesEx)
